Add link to features and feedback.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -17,6 +17,8 @@
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/}" data-toggle="dropdown">Home Page</a></li>
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ecosystem}" data-toggle="dropdown">Ecosystem</a></li>
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/contact}" data-toggle="dropdown">Contact</a></li>
+                	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/feature-introduction}" data-toggle="dropdown">Features</a></li>
+                	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/feedback}" data-toggle="dropdown">Feedback</a></li>
                 </ul>
             </li>
             <li class="dropdown nav-item active" data-menu="dropdown">
