Fix lỗi tắt thanh nội dung của navbar

--- a/web/src/main/webapp/WEB-INF/templates/ecosystem.html
+++ b/web/src/main/webapp/WEB-INF/templates/ecosystem.html
@@ -133,7 +133,7 @@
 	<!-- Header Section -->
  	<div id="fixedToolbar" class="d-none fixed-top bg-light shadow-sm">
 	    <div class="container d-flex align-items-center">
-	    	<a href="/crm-web/">
+	    	<a href="/crm-web/" class="position-relative">
 			    <img src="resources/Image/intro.png" alt="Logo" class="img-fluid me-3" style="height: 50px;">
 			    <span class="custom-tooltip">Go Home</span>
 			</a>
@@ -448,7 +448,6 @@
 	        <div class="container d-flex align-items-center">
 	            <a href="/crm-web/" class="text-decoration-none d-flex align-items-center position-relative">
 	                <img src="resources/Image/intro.png" alt="Logo" class="img-fluid me-3" style="height: 50px;">
-	                <span class="custom-tooltip">Go Home</span>
 	            </a>
 	            <span></span> <!-- Nội dung sẽ thay đổi khi cuộn -->
 	        </div>
