fix lỗi không load tên người gửi khi mở new order từ list customer Lý do lỗi: code dev_son set lại dữ liệu trong localStorage

--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -302,7 +302,8 @@
 		            }
 		        }		        
 		    });
-		    orderSenderNameCreate.value = localStorage.getItem("orderSenderNameCreate");
+		    if (orderSenderNameCreate.value == null)
+		    	orderSenderNameCreate.value = localStorage.getItem("orderSenderNameCreate"); 
 		});
 	</script>
 </body>
