--- a/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_interaction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_interaction.html
@@ -4,10 +4,8 @@
 		<th:block th:include="fragments/interaction/frg_searchInteraction.html"></th:block>		
 		<div class="container">
 			<h4 class="title order-title justify-content-center">Danh Sách Tương Tác</h4>
-			<div id="success-alert" class="alert alert-success" style="display: none">
-		       <button type="button" class="close" data-dismiss="alert">x</button>
-		       <strong>Success! </strong> Saved.
-		    </div>
+			<div id="success-alert" class="alert alert-success" style="display: none"></div>
+			<div id="warning-alert" class="alert alert-warning" style="display: none"></div>
 		</div>
 		<div id="tblInteraction"></div>
 		<button type="submit" class="btn btn-primary">Save</button>		
