--- a/web/src/main/webapp/WEB-INF/templates/newEditCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/newEditCustomer.html
@@ -10,6 +10,7 @@
     <!-- END COMMON CSS -->
 
     <link rel="stylesheet" type="text/css" href="resources/css/add-customer-style.css">
+    <th:block th:include="fragments/head"></th:block>
 </head>
 <body class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
     data-open="click" data-menu="vertical-compact-menu" data-col="2-columns">
