Update code createOrder.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -193,7 +193,7 @@
 												    <!-- <form action="/crm-web/customer-list-search-son" method="get"> -->
 												   	<form th:action="@{/customer/customer-list-search-son}" method="get">
 												      <div class="modal-header">
-												        <h1 class="modal-title fs-5" id="staticBackdropLabel">Tìm kiếm</h1>
+												        <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color: white">Tìm kiếm</h1>
 												        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 												      </div>
 												      <div class="modal-body w-100">
