--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -71,6 +71,8 @@
                 </ul>
              </li>
              <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">About</span></a>
+             
+             <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" th:href="'https://myworkspace.vn/cas/login?service=http://localhost:8080/crm-web/j_spring_cas_security_check'" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">LOG IN</span></a>
         </ul>
     </div>
 </div>        
