Add function Search Order for OrderHandsontable and add login using CAS

--- a/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Datatable.html
@@ -134,11 +134,11 @@
 	                      	<div class="col-md-3 col-sm-12" style="text-align: left;">
 							    <fieldset class="startdate-option" style="margin-bottom: 10px;">
 							        <h5 style="text-align: left; margin-bottom: 5px; font-size: 15px;">Ngày lập</h5>
-							        <input class="form-control" type="date" id="orderDate" style="width: auto; padding: 5px; color: black; background-color: white; display: inline-block;">
+							        <input class="form-control" type="date" id="orderDate" placeholder="dd/mm/yyyy" style="width: auto; padding: 5px; color: black; background-color: white; display: inline-block;">
 							    </fieldset>
 							    <fieldset class="delidate-option" style="margin-bottom: 10px;">
 							        <h5 style="text-align: left; margin-bottom: 5px; font-size: 15px;">Ngày giao</h5>
-							        <input class="form-control" type="date" id="deliveryDate" style="width: auto; padding: 5px; color: black; background-color: white; display: inline-block;">
+							        <input class="form-control" type="date" id="deliveryDate" placeholder="dd/mm/yyyy" style="width: auto; padding: 5px; color: black; background-color: white; display: inline-block;">
 							    </fieldset>
 							    <fieldset class="text-right">
 							        <!-- <button type="submit" class="search-order" style="margin-top: 10px; display: inline-block;">Tìm</button> -->
@@ -166,6 +166,5 @@
 
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Datatable_Bao.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/searchOrders_Bao.js}"></script>
-	
 </body>
 </html>
