--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -13,7 +13,7 @@
 				<h3 class="content-header-title">Quản lý đơn hàng</h3>
 				<div class="row">
 					<div class="heading-elements" style="display: flex;">
-						<a th:href="@{/orders}">
+						<a th:href="@{/orders-handsontable}">
 							<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i
 									class="fas fa-box-open white"></i> Đơn hàng_Handsontable</button>
 						</a>
