Update Login using CAS (gần thành công, chưa load dc username lên)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Handsontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Handsontable.html
@@ -97,7 +97,7 @@
 								        </th:block>
 						            </select>	 -->
 						            <div id="order-type-input-container" class="border p-2 rounded">
-					                  <div id="order-type-chips-container" class="chips-container"></div>
+					                  <div id="order-type-chips-container-handsontable" class="chips-container"></div>
 					                  <input 
 					                    id="orderTypeInput" 
 					                    class="form-control border-0 d-inline-block"
@@ -165,7 +165,7 @@
 
 	</script>
 
-	<!-- <script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Handsontable.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/searchOrders_Ngan.js}"></script> -->
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Handsontable.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/searchOrders_Ngan.js}"></script>
 </body>
 </html>
