--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/library/webjars/datatables/1.10.25/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/library/webjars/datatables/1.10.25/css/jquery.dataTables.min.css">
-    
+	<link type="text/css" rel="stylesheet" href="/library/webjars/handsontable/handsontable.full.min.css" />
     <!-- START COMMON CSS -->
 	<th:block th:include="fragments/common_css"></th:block>
 	<!-- END COMMON CSS -->
@@ -71,5 +71,9 @@ div#createOrderModal{
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Datatable_Bao.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/createOrder.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadSender-Receiver_Inform_Create.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/responsible-person/init.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/responsible-person/responsiblePerson-save.js}"></script>
+	<script th:inline="javascript" src="/library/webjars/handsontable/handsontable.full.min.js"></script>
+
 </body>
 </html>
