--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -74,7 +74,7 @@
 						<a th:href="@{newEditCustomer(id=${customer.id})}" >
 						    <button type="button"
 						    	style="cursor: pointer;">
-						    Edit
+						    <i class="icon-pencil"></i> Edit
 						    </button>
 						</a>
 						<button style="cursor: pointer; background: #DA4453" th:onclick="'hideCustomer(' + ${customer.id} + ')'">Hide</button>
